--- a/index.html
+++ b/index.html
@@ -5,14 +5,46 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Title</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&display=swap" rel="stylesheet">
+
+  <title>Product preview card component</title>
   <link rel="stylesheet" href="/sass/main.scss">
 </head>
 
 <body>
 
   <main>
-    content goes here
+    
+    <!-- <div class="container"> -->
+      <div class="card">
+
+        <picture>
+          <source srcset="/assets/image-product-desktop.jpg" media="(min-width: 600px)">
+          <img src="/assets/image-product-mobile.jpg" alt="perfume-bottle">
+        </picture>
+        <div class="card__body">
+          <div class="card__header">
+            <p class="card__product-type">perfume</p>
+            <h1 class="heading-1">Gabrielle Essence Eau De Parfum</h1>
+          </div>
+
+          <p class="card__product-description">A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p> 
+  
+          <div class="card__product-price flex-group my-auto">
+            <p class="heading-1 clr-accent-600">$149.99</p>
+            <p class="text-line-through">$169.99</p> 
+          </div>
+  
+          <button class="button" data-type="accent"><img src="/assets/icon-cart.svg" alt="add to cart"> Add to Cart</button> 
+        </div>
+      </div>
+    <!-- </div> -->
+
   </main>
 
 
